--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -25,7 +25,7 @@
   <div id="login_strip"></div>
   <div id="login_area_bg">
 
-    <% form_for :user do |form| %>
+    <%= form_for :user, url: login_user_index_path do |form| %>
 
       <div id="login_area">
         <label for="username"><%= t('username') %></label>
