--- a/app/views/user/dashboard.erb
+++ b/app/views/user/dashboard.erb
@@ -26,48 +26,46 @@
 <div id="user_options">
   <% if @user.admin? %>
     <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('admission')}</p></div>", {:controller => "student", :action => "admission1"}, :class => "option_buttons", :id => "admission_button", :title => "#{t('admission_link_title')}"%>
+      <%= link_to create_link(t('admission')), {:controller => "student", :action => "admission1"}, :class => "option_buttons", :id => "admission_button", :title => "#{t('admission_link_title')}"%>
     </div>
     <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('student_details')}</p></div>", {:controller => "student", :action => "index"}, :class => "option_buttons", :id => "student_details_button", :title => "#{t('student_link_title')}"%>
+      <%= link_to create_link(t('student_details')), {:controller => "student", :action => "index"}, :class => "option_buttons", :id => "student_details_button", :title => "#{t('student_link_title')}"%>
     </div>
     <div class="button-box">
-      <%= link_to "<div class ='button-label'><p> #{t('manage_users')} </p></div>", {:controller => "user", :action => "index"},
+      <%= link_to create_link(t('manage_users')), {:controller => "user", :action => "index"},
         :class => "option_buttons", :id => "manage_users_button", :title =>t('user_link_title') %>
     </div>
     <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('manage_news')}</p></div>", {:controller => "news", :action => "index"},
+      <%= link_to create_link(t('manage_news')), {:controller => "news", :action => "index"},
         :class => "option_buttons", :id => "manage_news_button",:title => t('news_link_title') %>
 
     </div>
     <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('examinations')}</p></div>", {:controller => "exam", :action => "index"},
-        :class => "option_buttons", :id => "examinations_button",:title => "          #{t('manage_examinations')}" %>
+      <%= link_to create_link(t('examinations')), {:controller => "exam", :action => "index"},
+        :class => "option_buttons", :id => "examinations_button",:title => "#{t('manage_examinations')}" %>
     </div>
     <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('timetable_text')}</p></div>", {:controller => "timetable", :action => "index"},
-        :class => "option_buttons", :id => "timetable_button",:title => t('timetable_link_title') %>
+      <%= link_to create_link(t('timetable_text')), {:controller => "timetable", :action => "index"}, :class => "option_buttons", :id => "timetable_button",:title => t('timetable_link_title') %>
     </div>
     <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
+      <%= link_to create_link(t('attendance')), {:controller => "student_attendance", :action => "index"},
         :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title')  %>
     </div>
     <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('settings')}</p></div>", {:controller => "configuration", :action => "index"},
+      <%= link_to create_link(t('settings')), {:controller => "configuration", :action => "index"},
         :class => "option_buttons", :id => "settings_button", :title => t('setting_link_title') %>
     </div>
 
     <% if @config.include?('HR') %>
       <div class="button-box">
-        <%= link_to "<div class ='button-label'><p>#{t('human_resources')}</p></div>", {:controller => "employee", :action => "hr"},
-          :class => "option_buttons", :id => "hr_button", :title => t('hr_link_title')%>
+        <%= link_to create_link(t('human_resources')), {:controller => "employee", :action => "hr"}, :class => "option_buttons", :id => "hr_button", :title => t('hr_link_title')%>
       </div>
 
     <% end %>
 
     <% if @config.include?('Finance') %>
       <div class="button-box">
-        <%= link_to "<div class ='button-label'><p> #{t('finance_text')}</p></div>", {:controller => "finance", :action => "index"},
+        <%= link_to create_link(t('finance_text')), {:controller => "finance", :action => "index"},
           :class => "option_buttons", :id => "finance_button", :title => t('finance_link_title') %>
       </div>
     <% end %>
@@ -75,40 +73,40 @@
   <% elsif @user.student? or @user.parent?%>
 
     <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('my_profile')}</p></div>", {:controller => "student", :action => "profile", :id => @student.id},
+      <%= link_to create_link(t('my_profile')), {:controller => "student", :action => "profile", :id => @student.id},
         :class => "option_buttons", :id => "student_details_button", :title => "        #{t('view_your_profile')}"  %>
 
     </div>
     <div class="button-box">
-      <%= link_to campus_news_btn.html_safe, {:controller => "news", :action => "index"},
+      <%= link_to create_link(t('campus_news')) , {:controller => "news", :action => "index"},
         :class => "option_buttons", :id => "campus_news_button",:title => t('news_link_title')%>
 
     </div>
     <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('timetable_text')}</p></div>".html_safe, {:controller => "timetable", :action => "student_view",:id=>@student.id},
+      <%= link_to create_link(t('timetable_text')), {:controller => "timetable", :action => "student_view",:id=>@student.id},
         :class => "option_buttons", :id => "timetable_button",:title => t('timetable_link_title') %>
     </div>
     <div class="button-box">
       <% unless @user.check_reminders == 0 %>
         <div class="reminder1">
-          <%= link_to "<div class ='button-label'><p>#{t('reminders')}</p></div>", {:controller => "reminder", :action => "index"},
+          <%= link_to create_link(t('reminders')), {:controller => "reminder", :action => "index"},
             :class => "option_buttons", :id => "reminders_button", :title => "         #{t('student_messages')}"%>
           <div class ="count"><%= render :partial => 'layouts/reminder_count' %></div>
         </div>
       <% else %>
-        <%= link_to "<div class ='button-label'><p>#{t('reminders')}</p></div>", {:controller => "reminder", :action => "index"},
+        <%= link_to create_link(t('reminders')), {:controller => "reminder", :action => "index"},
           :class => "option_buttons", :id => "reminders_button", :title => "         #{t('student_messages')}"%>
       <% end %>
     </div>
     <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('academics')}</p></div>", {:controller => "student", :action => "reports",:id => @student.id},
+      <%= link_to create_link(t('academics')), {:controller => "student", :action => "reports",:id => @student.id},
         :class => "option_buttons", :id => "academic_button",:title => "         #{t('academic_reports')}   "  %>
     </div>
   <% else %>
 
     <% if @config.include?('HR') %>
       <div class="button-box">
-        <%= link_to "<div class ='button-label'><p>#{t('my_profile')}</p></div>", {:controller => "employee", :action => "profile",:id => @employee.id},
+        <%= link_to create_link(t('my_profile')), {:controller => "employee", :action => "profile",:id => @employee.id},
           :class => "option_buttons", :id => "my_profile_button", :title => "  #{t('profile_detail')}" unless @employee.nil?%>
       </div>
     <% end  %>
@@ -116,47 +114,47 @@
 
     <% if permitted_to? :admission1, :student %>
       <div class="button-box">
-        <%= link_to "<div class ='button-label'><p>#{t('admission')}</p></div>", {:controller => "student", :action => "admission1"},
+        <%= link_to create_link(t('admission')), {:controller => "student", :action => "admission1"},
           :class => "option_buttons", :id => "admission_button", :title => "#{t('admission_link_title')}" %>
       </div>
     <%end%>
 
     <% if permitted_to? :index, :student%>
       <div class="button-box">
-        <%= link_to "<div class ='button-label'><p>#{t('student_details')}</p></div>", {:controller => "student", :action => "index"},
+        <%= link_to create_link(t('student_details')), {:controller => "student", :action => "index"},
           :class => "option_buttons", :id => "student_details_button", :title => t('student_link_title')%>
       </div>
     <%end%>
 
     <% if permitted_to? :index, :user %>
       <div class="button-box">
-        <%= link_to "<div class ='button-label'><p>#{t('manage_users')}</p></div>", {:controller => "user", :action => "index"},
+        <%= link_to create_link(t('manage_users')), {:controller => "user", :action => "index"},
           :class => "option_buttons", :id => "manage_users_button", :title => t('user_link_title') %>
       </div>
     <%end%>
 
     <% if permitted_to? :add,:news %>
       <div class="button-box">
-        <%= link_to "<div class ='button-label'><p>#{t('manage_news')}</p></div>", {:controller => "news", :action => "index"},
+        <%= link_to create_link(t('manage_news')), {:controller => "news", :action => "index"},
           :class => "option_buttons", :id => "manage_news_button",:title => t('news_link_title')%>
       </div>
     <% else %>
       <div class="button-box">
-        <%= link_to "<div class ='button-label'><p>#{t('campus_news')}</p></div>", {:controller => "news", :action => "index"},
+        <%= link_to create_link(t('campus_news')), {:controller => "news", :action => "index"},
           :class => "option_buttons", :id => "campus_news_button",:title => t('news_link_title')%>
       </div>
     <%end%>
 
     <% if permitted_to? :leave_management, :employee %>
       <div class="button-box">
-        <%= link_to "<div class ='button-label'><p>#{t('leaves')}</p></div>", {:controller => "employee", :action => "leave_management"},
+        <%= link_to create_link(t('leaves')), {:controller => "employee", :action => "leave_management"},
           :class => "option_buttons", :id => "leaves_button", :title => "#{t('leave_management')}"%>
 
       </div>
     <%else%>
       <% if @config.include?('HR') %>
         <div class="button-box">
-          <%= link_to "<div class ='button-label'><p>#{t('leaves')}</p></div>", {:controller => "employee_attendance", :action => "leaves",:id => @employee.id},
+          <%= link_to create_link(t('leaves')), {:controller => "employee_attendance", :action => "leaves",:id => @employee.id},
             :class => "option_buttons", :id => "leaves_button", :title => "#{t('leave_details')}." unless @employee.nil?%>
 
         </div>
@@ -166,14 +164,14 @@
     <div class="button-box">
       <% unless @user.check_reminders == 0 %>
         <div class="reminder1">
-          <%= link_to "<div class ='button-label'><p>#{t('reminders')}</p></div>", {:controller => "reminder", :action => "index"},
+          <%= link_to create_link(t('reminders')), {:controller => "reminder", :action => "index"},
             :class => "option_buttons", :id => "reminders_button", :title => "#{t('employee_messages')}"%>
           <div class ="count"><%= render :partial => 'layouts/reminder_count' %></div>
         </div>
 
       <% else %>
         <div class="button-box">
-          <%= link_to "<div class ='button-label'><p>#{t('reminders')}</p></div>", {:controller => "reminder", :action => "index"},
+          <%= link_to create_link(t('reminders')), {:controller => "reminder", :action => "index"},
             :class => "option_buttons", :id => "reminders_button", :title => "            #{t('student_messages')}"%>
         </div>
       <% end %>
@@ -184,7 +182,7 @@
 
         <% if permitted_to? :index, :student_attendance or  permitted_to? :index, :attendances and @employee_subjects.present? or @user.privileges.map{|p| p.name}.include?("StudentAttendanceView") or @user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
           <div class="button-box">
-            <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
+            <%= link_to create_link(t('attendance')), {:controller => "student_attendance", :action => "index"},
               :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title') %>
           </div>
         <%end%>
@@ -192,7 +190,7 @@
 
         <% if permitted_to? :index, :exam and (@user.privileges.map{|p| p.name}.include?("ExaminationControl") or @user.privileges.map{|p| p.name}.include?("EnterResults") or @user.privileges.map{|p| p.name}.include?("ViewResults")) %>
           <div class="button-box">
-            <%= link_to "<div class ='button-label'><p>#{t('examinations')}</p></div>", {:controller => "exam", :action => "index"},
+            <%= link_to create_link(t('examinations')), {:controller => "exam", :action => "index"},
               :class => "option_buttons", :id => "examinations_button",:title => t('exam_link_title') %>
           </div>
         <% end %>
@@ -200,19 +198,19 @@
         <% @attendance_type = Configur.find_by_config_key('StudentAttendanceType') %>
         <% unless @attendance_type.config_value == 'Daily' %>
           <div class="button-box">
-            <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
+            <%= link_to create_link(t('attendance')), {:controller => "student_attendance", :action => "index"},
               :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title') %>
           </div>
         <% else %>
           <div class="button-box">
             <% if permitted_to? :index, :student_attendance or  permitted_to? :index, :attendances %>
-              <%= link_to "<div class ='button-label'><p>#{t('attendance')}</p></div>", {:controller => "student_attendance", :action => "index"},
+              <%= link_to create_link(t('attendance')), {:controller => "student_attendance", :action => "index"},
                 :class => "option_buttons", :id => "student_attendance_button", :title => t('attendance_link_title')%>
             <%end%>
           </div>
         <% end %>
         <div class="button-box">
-          <%= link_to "<div class ='button-label'><p>#{t('examinations')}</p></div>", {:controller => "exam", :action => "index"},
+          <%= link_to create_link(t('examinations')), {:controller => "exam", :action => "index"},
             :class => "option_buttons", :id => "examinations_button",:title => t('exam_link_title') %>
         </div>
       <% end  %>
@@ -220,21 +218,21 @@
 
     <% if permitted_to? :index, :timetable %>
       <div class="button-box">
-        <%= link_to "<div class ='button-label'><p>#{t('timetable_text')}</p></div>", {:controller => "timetable", :action => "index"},
+        <%= link_to create_link(t('timetable_text')), {:controller => "timetable", :action => "index"},
           :class => "option_buttons", :id => "timetable_button",:title => t('timetable_link_title') %>
       </div>
     <%end%>
 
     <% if permitted_to? :index, :configuration %>
       <div class="button-box">
-        <%= link_to "<div class ='button-label'><p>#{t('settings')}</p></div>", {:controller => "configuration", :action => "index"},
+        <%= link_to create_link(t('settings')), {:controller => "configuration", :action => "index"},
           :class => "option_buttons", :id => "settings_button", :title => t('setting_link_title') %>
       </div>
     <% end %>
     <% if @config.include?('HR') %>
       <% if permitted_to? :hr,:employee %>
         <div class="button-box">
-          <%= link_to "<div class ='button-label'><p>#{t('human_resources')}</p></div>", {:controller => "employee", :action => "hr"},
+          <%= link_to create_link(t('human_resources')), {:controller => "employee", :action => "hr"},
             :class => "option_buttons", :id => "hr_button", :title => t('hr_link_title') %>
         </div>
       <% end %>
@@ -242,7 +240,7 @@
 
     <% if permitted_to? :index,:finance %>
       <div class="button-box">
-        <%= link_to "<div class ='button-label'><p>#{t('finance_text')}</p></div>", {:controller => "finance", :action => "index"},
+        <%= link_to create_link('finance_text'), {:controller => "finance", :action => "index"},
           :class => "option_buttons", :id => "finance_button", :title =>t('finance_link_title') %>
       </div>
     <% end %>
@@ -253,7 +251,7 @@
     <% unless mod[:dashboard_menu].blank? %>
       <% if can_access_request? "#{mod[:dashboard_menu][:action]}".to_sym,"#{mod[:dashboard_menu][:controller]}".to_sym %>
         <div class="button-box">
-          <%= link_to "<div class =\"button-label\"><p>#{t("#{mod[:dashboard_menu][:title]}")}</p></div>", {:controller => "#{mod[:dashboard_menu][:controller]}", :action => "#{mod[:dashboard_menu][:action]}"}, :class=>"#{mod[:dashboard_menu][:options][:class]}", :id=>"#{mod[:dashboard_menu][:options][:id]}", :title=>"#{t("#{mod[:dashboard_menu][:options][:title]}")}" %>
+          <%= link_to create_link(t("#{mod[:dashboard_menu][:title]}")), {:controller => "#{mod[:dashboard_menu][:controller]}", :action => "#{mod[:dashboard_menu][:action]}"}, :class=>"#{mod[:dashboard_menu][:options][:class]}", :id=>"#{mod[:dashboard_menu][:options][:id]}", :title=>"#{t("#{mod[:dashboard_menu][:options][:title]}")}" %>
         </div>
       <% end %>
     <% end %>
