--- a/app/views/event/show.erb
+++ b/app/views/event/show.erb
@@ -104,7 +104,7 @@
 
       <div><%= render :partial=>"event_batch" %></div>
 
-      <% @config = Configuration.available_modules%>
+      <% @config = Settings.available_modules%>
       <div id="select-option"></div>
       <% if @config.include?("HR") %>
         <div><%= render :partial=>"event_department" %></div>
