--- a/app/views/layouts/pdf_header.html.erb
+++ b/app/views/layouts/pdf_header.html.erb
@@ -22,8 +22,8 @@
     <%= wicked_pdf_image_tag "/"+(current_school_detail.logo.path||"#{Rails.root}/public  application/app_fedena_logo.jpg") %>
   </div>
   <div class="header-content">
-    <p><%=Configuration.get_config_value('InstitutionName'); %></p>
-    <p><%=Configuration.get_config_value('InstitutionAddress'); %></p>
+    <p><%=Settings.get_config_value('InstitutionName'); %></p>
+    <p><%=Settings.get_config_value('InstitutionAddress'); %></p>
   </div>
 
 </div>
