--- a/app/views/employee/edit_monthly_payslip.erb
+++ b/app/views/employee/edit_monthly_payslip.erb
@@ -32,7 +32,7 @@
   <h1><%= t('monthly_payslip') %></h1>
   <h3><%= t('edit_text') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("uttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 
