--- a/app/views/exam/create_exam.html.erb
+++ b/app/views/exam/create_exam.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  examination/show_exam.png") %>
+  <%= image_tag("examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('create_exam') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="inner-tab-menu">
@@ -45,7 +45,7 @@
         <%= select :courses, :name,
           @course.map {|b| [b.full_name, b.id]},
           {:prompt => "#{t('select_a_course')}"},
-          {:onChange => "#{remote_function(:url => {:action => "update_batch"},
+          {:onChange => "#{remote_function(:url => {:action => "update_batch", course_name: "value"},
           :with => "'course_name='+ value",
           :before => "Element.show('loader')",
           :success => "Element.hide('loader')"
