--- a/app/views/exam/exam_wise_report.html.erb
+++ b/app/views/exam/exam_wise_report.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  examination/show_exam.png") %>
+  <%= image_tag("examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('exam_wise_report') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="page-yield">
@@ -31,21 +31,21 @@
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
   <div class="bread_crumb">
-    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
-    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= link_to t('exam_text'), exam_index_path %> &raquo;
+    <%= link_to t('report_center'), report_center_exam_index_path %> &raquo;
     <%= t('exam_wise_report') %>
   </div>
   <div class="box">
-    <% form_for :exam_report, :url=>{:action=>'generated_report'} do |x| %>
+    <%= form_for :exam_report, url: generated_report_exam_index_path do |x| %>
 
       <div class="text-input-bg">
         <%= select :exam_report, :batch_id,
           @batches.map {|b| [b.full_name, b.id]},
-          {:prompt => "#{t('select_a_batch')}"},
-          {:onChange => "#{remote_function(:url => {:action => "list_exam_types"},
-          :with => "'batch_id='+value",
-          :before => "Element.show('loader')",
-          :success => "Element.hide('loader')"
+          { prompt: t('select_a_batch')},
+          { onChange: "#{remote_function(url: list_exam_types_exam_index_path(batch_id: "value") ,
+          with: "'batch_id='+value",
+          before: "Element.show('loader')",
+          success: "Element.hide('loader')"
           )}"} %>
       </div>
 
