--- a/app/views/exam/generate_previous_reports.html.erb
+++ b/app/views/exam/generate_previous_reports.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("  examination/show_exam.png") %>
+<%= image_tag("examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('generate_previous_batch_reports') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="inner-tab-menu">
@@ -41,7 +41,7 @@
         <label for="student_course"><%= t('select_a_course') %> :</label>
         <div  class="text-input-bg">
           <%= select :report, :course_id,
-            Course.active.map {|b| [b.full_name, b.id]},{:prompt => "#{t('select_a_course')}"},{:onChange => "#{remote_function(:url => {:action => "select_inactive_batches"}, :with => "'course_id='+value")}"}%></div></div>
+            Course.active.map {|b| [b.full_name, b.id]},{ prompt: t('select_a_course')},{ onChange: "#{remote_function(url: { action: :select_inactive_batches, course_id: "value"}, with: "'course_id='+value")}"}%></div></div>
         <div id="select_inactive_batches"></div>
       <%= submit_tag "", :value => "►#{t('generate')}", :class => "submit_button" %>
     <% end %>
