--- a/app/views/scheduled_jobs/index.html.erb
+++ b/app/views/scheduled_jobs/index.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  examination/show_exam.png") %>
+  <%= image_tag("examination/show_exam.png") %>
   <h1>Scheduled Jobs</h1>
   <h3>Listing scheduled jobs</h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 
@@ -86,10 +86,10 @@
           <% last_completion_time = last_completion_time_record.config_value.to_time %>
         <% end %>
       <% else %>
-        <% last_completion_time = Settings.find(:all, :conditions=>["config_key like ?","job/#{params[:job_object]}%"]).map{|t| t.config_value.to_time}.sort.last %>
+        <% last_completion_time = Settings.where("config_key like ?","job/#{params[:job_object]}%").map{|t| t.config_value.to_time}.sort.last %>
       <% end %>
     <% else %>
-      <% last_completion_time = Settings.find(:all, :conditions=>["config_key like ?","job/%"]).map{|t| t.config_value.to_time}.sort.last %>
+      <% last_completion_time = Settings.where("config_key like ?","job/%").map{|t| t.config_value.to_time}.sort.last %>
     <% end %>
     <h5>Last Successful Completion Time : <%= last_completion_time.present? ? last_completion_time.strftime("%B %d, %Y  %r") : "-" %></h5>
     <div class="extender"></div>
