--- a/app/views/exam/generated_report2_pdf.erb
+++ b/app/views/exam/generated_report2_pdf.erb
@@ -18,8 +18,8 @@
 #under the License. -%>
 
 
-<div id="page-yield" class="available_sections1"">
-     <div class="page1"> </div>
+<div id="page-yield" class="available_sections1">
+  <div class="page1"> </div>
   <div class="section1 row" >
     <center>
       <div class="hor_line"></div>
