--- a/app/views/exam/_batch_select.html.erb
+++ b/app/views/exam/_batch_select.html.erb
@@ -22,5 +22,7 @@
   <div  class="text-input-bg">
     <%= select :ranking_level_report, :batch_id,
       @batches.map {|b| [b.full_name, b.id]},
-      {:prompt => "#{t('select_a_batch')}"},{:onChange => "#{remote_function(:url => {:action => "select_report_type"},:with=>"'batch_id='+value")}"}%></div></div>
+      {prompt: t('select_a_batch') },{ onChange: "#{remote_function( url: select_report_type_exam_index_path(batch: "value"), :with=>"'batch_id='+value")}"}%>
+  </div>
+</div>
 <div id="report_type_select"></div>
