--- a/app/views/exam/_exam_grade_form.erb
+++ b/app/views/exam/_exam_grade_form.erb
@@ -17,25 +17,28 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 
-<% form_for [@batch, @exam_group] do |f| %>
+<%= form_for [@batch, @exam_group] do |f| %>
 
   <%= f.error_messages %>
-<div class="exam-basic-details">
-  <div class="label-field-pair">
-    <%= f.label "#{t('name')}" %>
-     <div class="label-field-pair"> <div class="text-input-bg">
-  <%= f.text_field :name, :value=>@name %>
-    </div></div>
-  </div>
+  <div class="exam-basic-details">
+    <div class="label-field-pair">
+      <%= f.label t('name') %>
+       <div class="label-field-pair">
+        <div class="text-input-bg">
+          <%= f.text_field :name, value: @name %>
+        </div>
+      </div>
+    </div>
 
-  <div class="label-field-pair">
-   <%= f.label "#{t('exam_type')}" %>
-    <%= f.hidden_field :exam_type,:value=>@type %>
-    <div class="text-input-bg">
-    <%= text_field_tag "" , t(@type.underscore),:disabled=>true %>
-    </div>  <%= link_to "#{t('change_type')}", new_batch_exam_group_path(@batch,:ename=>@name),:class=>"type_link" %>
+    <div class="label-field-pair">
+      <%= f.label t('exam_type') %>
+      <%= f.hidden_field :exam_type, value: @type %>
+      <div class="text-input-bg">
+        <%= text_field_tag "" , t(@type.underscore), disabled: true %>
+      </div>
+      <%= link_to t('change_type'), new_batch_exam_group_path(@batch, ename: @name), class: :type_link %>
+    </div>
   </div>
-</div>
   <h4>
     <%= t('enter_exam_related_details') %>:
   </h4>
