--- a/app/views/exam/_subject_list.html.erb
+++ b/app/views/exam/_subject_list.html.erb
@@ -18,8 +18,10 @@
 #under the License. -%>
 
 <div class="label-field-pair">
-        <label for="student_course"><%= t('select_a_subject') %> :</label>
-        <div  class="text-input-bg">
-          <%= select :ranking_level_report, :subject_id,
-            @subjects.map {|b| [b.name, b.id]},
-            {:prompt => "select a subject"}%></div></div>
+  <label for="student_course"><%= t('select_a_subject') %> :</label>
+  <div  class="text-input-bg">
+    <%= select :ranking_level_report, :subject_id,
+      @subjects.map {|b| [b.name, b.id]},
+      {:prompt => "select a subject"}%>
+  </div>
+</div>
