--- a/app/views/exam/_update_batch.html.erb
+++ b/app/views/exam/_update_batch.html.erb
@@ -20,6 +20,7 @@
 
 <% @batch.each do |batch| %>
   <div class="link-box">
-      <div class="link-heading"><%= link_to batch.course.full_name, batch_exam_groups_path(batch) %> : <%= batch.full_name %> </div>
+    <div class="link-heading"><%= link_to batch.course.full_name, batch_exam_groups_path(batch) %> : <%= batch.full_name %>
     </div>
+  </div>
 <% end %>
