--- a/app/views/exam/academic_report.html.erb
+++ b/app/views/exam/academic_report.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  examination/show_exam.png") %>
+  <%= image_tag("examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('academic_reports') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png",:border => 0), :back %>
   </div>
 </div>
 <div id="page-yield">
@@ -45,7 +45,7 @@
         <% @mmg = 1;@g = 1 %>
         <% @exam_groups.each do |exam_group| %>
           <% @exam = Exam.find_by_subject_id_and_exam_group_id(subject.id,exam_group.id) %>
-          <% exam_score = ExamScore.find_by_student_id(@student.id, :conditions=>{:exam_id=>@exam.id}) unless @exam.nil? %>
+          <% exam_score = ExamScore.where(student_id: @student.id, exam_id: @exam.id).first unless @exam.nil? %>
           <% if exam_group.exam_type == "MarksAndGrades" %>
             <td class="col-3"><% unless @exam.nil?  %>
                 <%  unless exam_score.nil? %>
