--- a/app/views/exam/combined_report.html.erb
+++ b/app/views/exam/combined_report.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  examination/show_exam.png") %>
+  <%= image_tag("examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('combined_report') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), :back %>
   </div>
 </div>
 <div id="page-yield">
@@ -30,21 +30,24 @@
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
   <div class="bread_crumb">
-    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
-    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= link_to t('exam_text'), exam_index_path %> &raquo;
+    <%= link_to t('report_center'), report_center_exam_index_path %> &raquo;
     <%= t('combined_report') %>
   </div>
   <div class="box">
 
-    <% form_for :combined_report, :url=>{:action=>'student_combined_report'} do |x| %>
+    <%= form_for :combined_report, url: student_combined_report_exam_index_path do |x| %>
       <div class="label-field-pair">
         <label for="student_course"><%= t('select_a_batch') %> :</label>
         <div  class="text-input-bg">
           <%= select :combined_report, :batch_id,
             @batches.map {|b| [b.full_name, b.id]},
-            {:prompt => "#{t('select_a_batch')}"},{:onChange => "#{remote_function(:url => {:action => "load_levels"}, :with => "'batch_id='+value")}"}%></div></div>
+            { prompt: t('select_a_batch')},{ onChange: "#{remote_function( url: load_levels_exam_index_path(batch_id: "value"), :with => "'batch_id='+value")}"}%>
+        </div>
+      </div>
       <div id="levels"></div>
     <% end %>
 
     <div class="extender"></div>
-  </div></div>
+  </div>
+</div>
