--- a/app/views/exam/exam_wise_report.html.erb
+++ b/app/views/exam/exam_wise_report.html.erb
@@ -22,7 +22,7 @@
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('exam_wise_report') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png",:border => 0), :back %>
   </div>
 </div>
 <div id="page-yield">
