--- a/app/views/exam/generated_report3.html.erb
+++ b/app/views/exam/generated_report3.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("  examination/show_exam.png") %>
+<%= image_tag("examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('academic_reports') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png",:border => 0), :back %>
   </div>
 </div>
 <div id="page-yield">
