--- a/app/views/exam/ranking_level_report.html.erb
+++ b/app/views/exam/ranking_level_report.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  examination/show_exam.png") %>
+  <%= image_tag("examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('ranking_level_report') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), :back %>
   </div>
 </div>
 <div id="page-yield">
@@ -30,21 +30,24 @@
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
   <div class="bread_crumb">
-    <%= link_to t('exam_text'), :controller => "exam", :action=>"index" %> &raquo;
-    <%= link_to t('report_center'), :controller => "exam", :action => "report_center" %> &raquo;
+    <%= link_to t('exam_text'), exam_index_path %> &raquo;
+    <%= link_to t('report_center'), report_center_exam_index_path %> &raquo;
     <%= t('ranking_level_report') %>
   </div>
   <div class="box">
 
-    <% form_for :ranking_level_report, :url=>{:action=>'student_ranking_level_report'} do |x| %>
+    <%= form_for :ranking_level_report, url: student_ranking_level_report_exam_index_path do |x| %>
       <div class="label-field-pair">
         <label for="student_course"><%= t('select_mode') %>:</label>
         <div  class="text-input-bg">
           <%= select :ranking_level_report, :mode,
-            [["#{t('course_wise')}","course"],["#{t('batch_wise')}","batch"]],
-            {:prompt => "select a mode"}, {:onChange => "#{remote_function(:url => {:action => "select_mode"}, :with => "'mode='+value")}"}%></div></div>
+            [[t('course_wise'),"course"],[t('batch_wise'),"batch"]],
+            {prompt: "select a mode"}, { onChange: "#{remote_function( url: select_mode_exam_index_path(mode: "value"), with: "'mode='+value")}"}%>
+        </div>
+      </div>
       <div id="course-batch"></div>
       <%= submit_tag "", :value => "► #{t('view')}", :class => "submit_button" %>
     <% end %>
     <div class="extender"></div>
-  </div></div>
+  </div>
+</div>
