--- a/app/views/timetable/index.erb
+++ b/app/views/timetable/index.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  show_timetable.png") %>
+  <%= image_tag("show_timetable.png") %>
   <h1><%= t('timetable_text') %></h1>
   <h3><%= t('home') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png",:border => 0), :back %>
   </div>
 </div>
 
@@ -35,13 +35,15 @@
   <div class="box">
     <%  if permitted_to? :new_timetable,:timetable%>
       <div class="link-box">
-        <div class="link-heading"><%= link_to "#{t('create_text')} #{t('weekdays_text')}", :controller => "weekday", :action => "index" %></div>
+        <div class="link-heading">
+          <%= link_to "#{t('create_text')} #{t('weekdays_text')}", :controller => "weekday", :action => "index" %>
+        </div>
         <div class="link-descr"><%= t('create_text') %> <%= t('weekdays_text') %></div>
       </div>
     <% end %>
 
     <div class="link-box">
-      <div class="link-heading"><%= link_to "#{t('set_class_timings')}", :controller => "class_timings", :action => "index"   %></div>
+      <div class="link-heading"><%= link_to t('set_class_timings'), :controller => "class_timings", :action => "index"   %></div>
       <div class="link-descr"><%= t('select_a_class_and_edit_the_timetable') %>.</div>
     </div>
     <%if permitted_to? :work_allotment,:timetable%>
