--- a/app/views/employee/edit_bank_details.erb
+++ b/app/views/employee/edit_bank_details.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  HR/show_hr.png") %>
+  <%= image_tag("HR/show_hr.png") %>
   <h1><%= t('employee_settings') %></h1>
   <h3><%= t('edit_bank_details') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("buttons/back.png", border: 0), onclick: "history.back()" %>
   </div>
 </div>
 
