--- a/app/views/timetable/edit2.erb
+++ b/app/views/timetable/edit2.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("  show_timetable.png") %>
+<%= image_tag("show_timetable.png") %>
   <h1><%= t('timetable_text') %></h1>
   <h3><%= t('edit_text') %> - <%= @batch.full_name %> </h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png",:border => 0), 'javascript: void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
@@ -101,12 +101,12 @@ function make_ajax_calls(tte_id, emp_sub_id){
            <% end %>
   <% @subjects= @subjects + @ele_subjects  %>
     <%= select :timetable_entries, :subject_id, @subjects.map { |s| [s.name, s.id] },
-            {:prompt => "#{t('select_subject')}"},
-            {:onChange => "#{remote_function(:url => {:action => "update_employees"},
-            :with => "'subject_id='+value",
-            :update=>"employee-list",
-             :before => "Element.show('loader')",
-             :success => "Element.hide('loader')")}"} %>
+            { prompt: t('select_subject')},
+            { onChange: "#{remote_function(:url => {action: "update_employees", subject_id: "value" },
+            with: "'subject_id='+value",
+            update: "employee-list",
+            before: "Element.show('loader')",
+            success: "Element.hide('loader')")}"} %>
       </div>
     </div>
   <div id="employee-list"></div>
