--- a/app/views/timetable/select_class2.erb
+++ b/app/views/timetable/select_class2.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("  show_timetable.png") %>
+<%= image_tag("show_timetable.png") %>
   <h1><%= t('timetable_text') %></h1>
   <h3><%= t('select_class_to_edit') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png",:border => 0), 'javascript: void(0)', onclick: "history.back()" %>
   </div>
 </div>
 
@@ -32,11 +32,11 @@
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
 
-  <% form_for :timetable_entry do |s| %>
+  <%= form_for :timetable_entry do |s| %>
 
     <div class="label-field-pair">
       <label for="timetable_entry_course_id"><%= t('select_a_batch') %></label>
-      <div class="text-input-bg"> <%= select :timetable_entry, :batch_id, @batches.map {|c| [c.full_name, c.id]},:prompt=>"#{t('select_a_batch')}" %>
+      <div class="text-input-bg"> <%= select :timetable_entry, :batch_id, @batches.map {|c| [c.full_name, c.id]},:prompt=> t('select_a_batch') %>
       </div>
     </div>
 
