--- a/app/views/cce_weightages/show.html.erb
+++ b/app/views/cce_weightages/show.html.erb
@@ -25,7 +25,7 @@
   <h1>CCE Weightages</h1>
   <h3>Assigned courses</h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript: void(0);', onclick: "history.back()" %>
   </div>
 </div>
 <div id="inner-tab-menu">
