--- a/app/views/descriptive_indicators/index.html.erb
+++ b/app/views/descriptive_indicators/index.html.erb
@@ -23,7 +23,7 @@
   <h1>Descriptive Indicators</h1>
   <h3>Descriptive Indicators</h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript: void(0);', onclick: "history.back()" %>
   </div>
 </div>
 <div id="inner-tab-menu">
