--- a/app/views/class_designations/index.html.erb
+++ b/app/views/class_designations/index.html.erb
@@ -22,7 +22,7 @@
   <h1><%= t('class_designations_text') %></h1>
   <h3><%= t('manage_class_designations') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript: void(0);', onclick: "history.back()" %>
   </div>
 </div>
 <div id="page-yield">
