--- a/app/views/courses/edit_subject_amount.erb
+++ b/app/views/courses/edit_subject_amount.erb
@@ -4,12 +4,12 @@
   <h3><%= t('edit_subject_amount') %></h3>
 
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript: void(0);', onclick: "history.back()" %>
   </div>
 </div>
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "#{t('courses_text')}", courses_path %></li>
+    <li><%= link_to t('courses_text'), courses_path %></li>
   </ul>
 </div>
 
