--- a/app/views/courses/manage_course.html.erb
+++ b/app/views/courses/manage_course.html.erb
@@ -22,7 +22,7 @@
   <h1><%= t('courses_text') %></h1>
   <h3><%= "#{t('manage_course')}" %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript: void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
@@ -37,7 +37,7 @@
 <div id="page-yield">
   <div class="bread_crumb">
     <%= link_to t('configuration_text'), :controller => "configuration", :action=>"index" %> &raquo;
-    <%= link_to "#{t('courses_text')}", :controller => "courses", :action => "index" %> &raquo;
+    <%= link_to t('courses_text'), :controller => "courses", :action => "index" %> &raquo;
     <%= t('manage_course') %>
   </div>
   <% unless flash[:notice].nil? %>
