--- a/app/views/employee/add_additional_details.erb
+++ b/app/views/employee/add_additional_details.erb
@@ -22,7 +22,7 @@
   <h1><%= t('employee_settings') %></h1>
   <h3><%= t('add_additional_details') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript: void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
