--- a/app/views/archived_student/student_report.html.erb
+++ b/app/views/archived_student/student_report.html.erb
@@ -22,13 +22,13 @@
   <h1><%= t('academics') %></h1>
   <h3><%= t('student_report') %></h3>
   <div id="app-back-button">
-    <%= link_to image_tag("buttons/back.png", border: 0),'javascript: void(0);', onclick: "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript: void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
 <div id="page-yield">
   <div id="box">
-    <% remote_form_for :advance_search do |f| %>
+    <%= form_for :advance_search, remote: true do |f| %>
       <div class="label-field-pair">
         <label for="student"><%= t('student_name') %></label>
         <div class="text-input-bg">
