--- a/app/views/class_designations/_class_form.html.erb
+++ b/app/views/class_designations/_class_form.html.erb
@@ -17,7 +17,7 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 
-<% remote_form_for :class_designation,:url=>{:action=>"create_class_designation", :course_id=>@course.id} do |c| %>
+<%= form_for :class_designation, url: { action: :create_class_designation, course_id: @course.id}, remote: true do |c| %>
 
   <div id="form-content">
     <div class="label-field-pair">
