--- a/app/views/courses/_batch_group_form.html.erb
+++ b/app/views/courses/_batch_group_form.html.erb
@@ -17,7 +17,7 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 
-<% remote_form_for :batch_group,:url=>{:action=>"create_batch_group", :course_id=>@course.id} do |c| %>
+<%= form_for :batch_group, url: { action: :create_batch_group, course_id: @course.id}, remote: true do |c| %>
 
       <div id="form-content">
         <div class="label-field-pair">
