--- a/app/views/employee/_edit_leave_count.erb
+++ b/app/views/employee/_edit_leave_count.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div class="box">
-  <% remote_form_for :leave_count,:url=>{:action=>'employee_leave_count_update', :id=>@leave_count.id} do |c| %>
+  <%= form_for :leave_count,:url=>{:action=>'employee_leave_count_update', :id=>@leave_count.id}, remote: true do |c| %>
     <div id="form-content">
       <div class="label-field-pair">
         <label for="category_name"><%= t('leave_name') %></label>
@@ -34,7 +34,7 @@
         <label for="category_name"><%= t('leave_taken') %></label>
         <div class="text-bg"><%= @leave_count.leave_taken %></div>
       </div>
-        
+
       <div id="submit-button">
           <%=submit_tag("► #{t('save')}") %>
       </div>
