--- a/app/views/employee_attendance/leave_history.erb
+++ b/app/views/employee_attendance/leave_history.erb
@@ -35,7 +35,7 @@
 <div id="page-yield">
   <div class="box">
 
-    <% remote_form_for :period ,:url=>{:action=>'update_leave_history', :id=>@employee.id}do |f| %>
+    <%= form_for :period ,:url=>{:action=>'update_leave_history', :id=>@employee.id}, remote: true do |f| %>
       <div class="label-field-pair">
         <label for="reason"><%= t('start_date') %></label>
         <div class="text-input-bg"><%= calendar_date_select_tag 'period[start_date]', I18n.l(1.month.ago.to_date,:format=>:default) ,:popup=>:force%></div>
