--- a/app/views/ranking_levels/_rank_form.html.erb
+++ b/app/views/ranking_levels/_rank_form.html.erb
@@ -17,7 +17,7 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 
-<% remote_form_for :ranking_level,:url=>{:action=>"create_ranking_level", :course_id=>@course.id} do |c| %>
+<%= form_for :ranking_level,:url=>{:action=>"create_ranking_level", :course_id=>@course.id}, remote: true do |c| %>
 
   <div id="form-content">
     <div class="label-field-pair">
