--- a/app/views/sms/employees.html.erb
+++ b/app/views/sms/employees.html.erb
@@ -18,26 +18,24 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  sms/sms_icon.png") %>
+  <%= image_tag("sms/sms_icon.png") %>
   <h1><%= t('sms_text') %></h1>
   <h3><%= t('employees') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript:void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
 <div id="page-yield">
   <div class="box">
-    <% remote_form_for :send_sms,
-      :before => "Element.show('loader2')",
-      :success => "Element.hide('loader2')" do |x| %>
+    <%= form_for :send_sms, remote: true do |x| %>
       <div class="label-field-pair">
         <div class="label-container"><label><%= t('select_a_department') %>:</label> </div>
         <div class="text-input-bg">
           <%= select :send_sms, :batch_id,
             EmployeeDepartment.all.map {|b| [b.name, b.id]},
-            {:prompt => "#{t('select_a_department')}"},
-            {:onChange => "#{remote_function(:url => {:action => "list_employees"},
+            { prompt: t('select_a_department') },
+            {:onChange => "#{remote_function(:url => {:action => "list_employees",},
             :with => "'dept_id='+value",
             :before => "Element.show('loader')",
             :success => "Element.hide('loader')"
