--- a/app/views/student/_student_additional_field_option_fields.html.erb
+++ b/app/views/student/_student_additional_field_option_fields.html.erb
@@ -1,5 +1,5 @@
 <div class="fields label-field-pair">
-  <%= c.label '' %>
+  <%#= c.label '' %>
   <div class="text-input-bg">
   <%= c.text_field :field_option %></div>
   <%= link_to_remove_fields "", c %>
