--- a/app/views/student/add_additional_details.erb
+++ b/app/views/student/add_additional_details.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  show_settings.png") %>
+  <%= image_tag("show_settings.png") %>
   <h1><%= t('student_settings') %></h1>
   <h3><%= t('add_additional_details') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript:void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
