--- a/app/views/student_attendance/student_report.html.erb
+++ b/app/views/student_attendance/student_report.html.erb
@@ -18,17 +18,17 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  attendence/attendence.png") %>
+  <%= image_tag("attendence/attendence.png") %>
   <h1><%= t('attendance') %></h1>
   <h3><%= t('student_report') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript:void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
 <div id="page-yield">
   <div id="box">
-    <% remote_form_for :advance_search do |f| %>
+    <%= form_for :advance_search, remote: true do |f| %>
       <div class="label-field-pair">
         <label for="student"><%= t('student_name') %></label>
         <div class="text-input-bg">
