--- a/app/assets/stylesheets/rtl/application.css
+++ b/app/assets/stylesheets/rtl/application.css
@@ -915,7 +915,7 @@ tr.tr-blank{
     margin-top : -33px; */
     height : 66px;
     clear : both;
-    background: url(/images/foot.png) repeat-x;
+    background: url(foot.png) repeat-x;
     width:100%;
      margin-top:15px;
 }
