--- a/app/assets/stylesheets/_layouts/login.css
+++ b/app/assets/stylesheets/_layouts/login.css
@@ -29,13 +29,13 @@ body {
     margin-top: 19px;
     height: 156px;
     width: 100%;
-    background: #B00 url(/images/application/bg_pattern.png) repeat;
+    background: #B00 url(application/bg_pattern.png) repeat;
 }
 #login_area_bg{margin-top: -175px; height:362px;}
-#login_area {height:362px;width:614px;background:#fff url(../../images/login/login_box.jpg) no-repeat;margin:0px auto;}
+#login_area {height:362px;width:614px;background:#fff url(login/login_box.jpg) no-repeat;margin:0px auto;}
 #login_area label {display:block;width:200px;margin-left:50px;padding-top:30px;font-weight:bold;color:#888;padding-bottom:5px;font-size:110%;}
 
-#username_textbox_bg, #password_textbox_bg {width:507px;height:58px;margin:0px auto;background:#fff url(../../images/login/text_box.jpg) no-repeat;}
+#username_textbox_bg, #password_textbox_bg {width:507px;height:58px;margin:0px auto;background:#fff url(login/text_box.jpg) no-repeat;}
 #username_textbox_bg input, #password_textbox_bg input {width:490px;height:54px;margin:2px 0 0 5px;float:left;border:none;background:transparent;font-size:40px;color:#666;}
 
 #submit_area input {
@@ -89,7 +89,7 @@ input[type="text"], input[type="password"], textarea, select {outline: none;}
     margin-top : -33px; */
     height : 66px;
     clear : both;
-    background: url(/images/foot.png) repeat-x;
+    background: url(foot.png) repeat-x;
     width:100%;
 }
 #footer_logo {
