--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,9 @@
 /*
   *= require jquery-ui/datepicker
+  *= require_tree .
+  *= require_self
 */
+
 body {
     font-family:Arial;
     margin:0;
@@ -918,7 +921,7 @@ tr.tr-blank{
     margin-top : -33px; */
     height : 66px;
     clear : both;
-    background: url(/images/foot.png) repeat-x;
+    background: url(foot.png) repeat-x;
     width:100%;
     margin-top:15px;
 }
