--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -27,8 +27,8 @@
       <link rel="icon" href="<%=current_school_detail.logo.url%>" type="<%=current_school_detail.logo.content_type%>" />
       <link rel="shortcut icon" href="<%=current_school_detail.logo.url%>" type="<%=current_school_detail.logo.content_type%>" />
     <% end %>
-    <%= stylesheet_link_tag(*get_stylesheets) %>
-    <%= javascript_include_tag :defaults %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= yield :head %>
   </head>
 
