--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@ body {
 }
 #header_bg {
     height : 80px;
-    background : #b00 url(../../images/application/bg_pattern.png) repeat;
+    background : #b00 url(/assets/application/bg_pattern.png) repeat;
 }
 #header {
     width : 980px;
@@ -107,7 +107,7 @@ body {
     border-bottom-width : 0;
     font: normal 0.9em Arial;
     line-height: 18px;
-    background: #b00 url(../images/application/bg_pattern.png) repeat;
+    background: #b00 url(/assets/application/bg_pattern.png) repeat;
 }
 #main-menu li:hover ul.level-1{
     visibility: visible;
@@ -151,7 +151,7 @@ body {
     border-bottom-width : 0;
     font: normal 0.9em Arial;
     line-height: 18px;
-    background: #b00 url(../images/application/bg_pattern.png) repeat;
+    background: #b00 url(/assets/application/bg_pattern.png) repeat;
 }
 #main-menu li ul.level-1 li:hover ul.level-2{
     visibility: visible;
@@ -214,7 +214,7 @@ p.flash-msg {
 
 #content-header {
     height:100px;
-    background:#fff url(../../images/examination/header_underline.jpg) bottom no-repeat;
+    background:#fff url(/assets/examination/header_underline.jpg) bottom no-repeat;
 }
 #content-header img {
     margin:0;
@@ -262,7 +262,7 @@ p.flash-msg {
 #news_feed {
     width:157px;
     margin:0 auto;
-    background:#fff url(../../images/fedena_user/dashboard/news_feed_bg.jpg) repeat;
+    background:#fff url(/assets/fedena_user/dashboard/news_feed_bg.jpg) repeat;
 }
 #news_feed small {
     padding-top:0px;
@@ -272,7 +272,7 @@ p.flash-msg {
     margin:0 auto;
     margin-top:25px;
     height:36px;width:157px;
-    background:#fff url(../../images/fedena_user/dashboard/dash_news_top.jpg) no-repeat;
+    background:#fff url(/assets/fedena_user/dashboard/dash_news_top.jpg) no-repeat;
     display: block;
 }
 #news_feed_bottom_img a {
@@ -341,7 +341,7 @@ body > #content_wrapper {
     font: normal 0.9em Arial;
     line-height: 18px;
     z-index: 100; /* zIndex should be greater than that of shadow's below */
-    background: #b00 url(../../images/application/bg_pattern.png) repeat;
+    background: #b00 url(/assets/application/bg_pattern.png) repeat;
     width: 125px; /* default width for menu */
 }
 
@@ -458,7 +458,7 @@ body > #content_wrapper {
 
 }
 .errorExplanation {
-    background: #ffdedf url(/images/_global/error.png) no-repeat 10px 14px;
+    background: #ffdedf url(/assets/_global/error.png) no-repeat 10px 14px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     height : auto; width : 510px;
@@ -523,7 +523,7 @@ body > #content_wrapper {
 /* Modalbox styles */
 
 #MB_frame #MB_header {
-    background: transparent url(../images/modalbox/header-underline.jpg) bottom center no-repeat;
+    background: transparent url(/assets/modalbox/header-underline.jpg) bottom center no-repeat;
     height: 55px;
 }
 #MB_frame #MB_caption {
@@ -908,7 +908,7 @@ tr.tr-blank{
     text-decoration: underline;
 }
 #error-box {
-    background: #ffdedf url(/images/_global/error.png) no-repeat 10px 14px;
+    background: #ffdedf url(/assets/_global/error.png) no-repeat 10px 14px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     height : auto;
@@ -937,11 +937,11 @@ tr.tr-blank{
     height:66px;
     margin-top:-55px;
     width:210px;
-    background: url(/images/footer-logo.png) no-repeat 0 0 transparent;
+    background: url(/assets/footer-logo.png) no-repeat 0 0 transparent;
 }
 
 #footer_logo a.footer-logo:hover {
-    background: url(/images/footer-logo.png) no-repeat -210px 0 transparent;
+    background: url(/assets/footer-logo.png) no-repeat -210px 0 transparent;
 
 }
 
@@ -998,10 +998,10 @@ tr.tr-blank{
     text-decoration: none;
 }
 #profile-link a{
-    background: url(/images/application/profile.png) no-repeat left center;
+    background: url(/assets/application/profile.png) no-repeat left center;
 }
 #messages-link a{
-    background: url(/images/application/msg.png) no-repeat left center;
+    background: url(/assets/application/msg.png) no-repeat left center;
     float: left;
 }
 #messages-link span {
@@ -1010,13 +1010,13 @@ tr.tr-blank{
     float: left;
 }
 #logout-link a{
-    background: url(/images/application/logout.png) no-repeat left center;
+    background: url(/assets/application/logout.png) no-repeat left center;
 }
 #logout-link{
     margin-right: 0 !important;
 }
 #profile-link:hover, #messages-link:hover, #logout-link:hover{
-    background: url(/images/application/top-link-bg.png) repeat;
+    background: url(/assets/application/top-link-bg.png) repeat;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
