--- a/app/assets/stylesheets/autosuggest-menu.css
+++ b/app/assets/stylesheets/autosuggest-menu.css
@@ -1,6 +1,6 @@
 /* Autocomplete
    ----------------------------------*/
-.ui-autocomplete { position: absolute; cursor: default; }      
+.ui-autocomplete { position: absolute; cursor: default; }
 .ui-autocomplete-loading { background: white url('images/ui-anim_basic_16x16.gif') right center no-repeat; }
 
 /* workarounds */
@@ -43,7 +43,7 @@
     color: #bb0000;
 }
 #autosuggest_menu_input{
-    background: url("../../images/search.png") no-repeat scroll 310px 50% #FFFFFF;
+    background: url("/assets/search.png") no-repeat scroll 310px 50% #FFFFFF;
     border: 1px solid #C6C6C6;
     border-radius: 1px 1px 1px 1px;
     font-size: 13px;
