--- a/app/assets/stylesheets/rtl/attendance/register.css
+++ b/app/assets/stylesheets/rtl/attendance/register.css
@@ -57,7 +57,7 @@
 #list li label input {
     margin-left:10px;
 }
-.name_list{background:url(../../../images/student_attendance/attendance_list/list_bg.jpg) no-repeat; height:30px;width:400px;}
+.name_list{background:url(/assets/student_attendance/attendance_list/list_bg.jpg) no-repeat; height:30px;width:400px;}
 .att_list_names {display:inline;}
 label {display:inline;}
 
@@ -70,7 +70,7 @@ label {display:inline;}
 /* searchbar styling */
 
 .searchbar {height:95px;width:391px;margin-right:4px;padding-right:20px;}
-.input-area-bg {width:350px;height:60px;background:#fff url(../../../images/_input_bg/text-search.png) no-repeat;}
+.input-area-bg {width:350px;height:60px;background:#fff url(/assets/_input_bg/text-search.png) no-repeat;}
 .searchbar input {width:320px;height:40px;margin:10px 10px 0 0;font-size:24pt;border:none;color:#444;background:transparent;}
 .searchbar-top-text {height:30px;width:100px;font-size:16pt;float:right;}
 .result-count{height:30px;color:#b00;width:100px;float:left;margin-left:60px;}
