--- a/app/assets/stylesheets/rtl/autosuggest-menu.css
+++ b/app/assets/stylesheets/rtl/autosuggest-menu.css
@@ -1,7 +1,7 @@
 /* Autocomplete
    ----------------------------------*/
 .ui-autocomplete { position: absolute; cursor: default; }
-.ui-autocomplete-loading { background: white url('images/ui-anim_basic_16x16.gif') left center no-repeat; }
+.ui-autocomplete-loading { background: white url('/assets/ui-anim_basic_16x16.gif') left center no-repeat; }
 
 /* workarounds */
 * html .ui-autocomplete { width:1px; } /* without this, the menu expands to 100% in IE6 */
@@ -43,7 +43,7 @@
     color: #bb0000;
 }
 #autosuggest_menu_input{
-    background: url("../../images/search.png") no-repeat scroll 2px 50% #FFFFFF;
+    background: url("/assets/search.png") no-repeat scroll 2px 50% #FFFFFF;
     border: 1px solid #C6C6C6;
     border-radius: 1px 1px 1px 1px;
     font-size: 13px;
